--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 </head>
 
 <body>
+    <div class="bg-menu">
+    </div>
     <header class="l-header">
         <nav class="c-nav">
+            <a href="index.html"></a>
             <div class="c-nav__logo">
                 <img src="./assets/Group 114.png" alt="Logo MedicaLaser" class="c-nav__img">
             </div>
-            <button class="c-hamburger">
-                <span class="c-hamburger__box">
+            </a>
+            <button class="c-hamburger ">
+                <span class="c-hamburger__box c">
                     <span class="c-hamburger__inner "></span>
                 </span>
             </button>
@@ -41,12 +45,12 @@
                         </a>
                     </li>
                     <li class="c-menu-nav__item">
-                        <a href="#" class="c-menu-nav__link">
+                        <a href="o-nas.html" class="c-menu-nav__link">
                             O NAS
                         </a>
                     </li>
                     <li class="c-menu-nav__item">
-                        <a href="#" class="c-menu-nav__link ">
+                        <a href="zabiegi.html" class="c-menu-nav__link ">
                             ZABIEGI
                         </a>
                     </li>
@@ -122,7 +126,7 @@ assets/doctor1-full_ejszml_c_scale,w_1920.png 1920w" src="assets/doctor1-full_ej
                     </div>
                 </div>
             </div>
-            <a href="" class="offert-btn btn">Więcej zabiegów</a>
+            <a href="zabiegi.html" class="offert-btn btn">Więcej zabiegów</a>
             <span class="offert-line line"></span>
         </section>
         <section class="doctors">
@@ -161,7 +165,7 @@ assets/doctor1-full_ejszml_c_scale,w_1920.png 1920w" src="assets/doctor1-full_ej
                     </div>
                 </div>
             </div>
-            <a href="" class="doctors-btn btn">Więcej specjalistów</a>
+            <a href="" class="doctors-btn btn">Inni specjaliści</a>
             <span class="doctors-line line"></span>
         </section>
         <section class="l-opinions">
@@ -363,82 +367,81 @@ assets/doctor1-full_ejszml_c_scale,w_1920.png 1920w" src="assets/doctor1-full_ej
             </div>
             <span class="opinions-line line"></span>
         </section>
-
         <section class="l-contact">
             <div class="c-contact">
                 <p class="c-contact__call">Zadzwoń</p>
                 <p class="c-contact__number">+48 516 516 112</p>
             </div>
             <div class="c-contact">
-                <p class="c-contact__write">napisz</p>
+                <p class="c-contact__write">Napisz</p>
                 <p class="c-contact__email">fotona4d@gmail.com</p>
             </div>
             <div class="c-contact">
-                <p class="c-contact__visit">lub odwiedź nas</p>
-                <p class="c-contact__place">w Mosinie, ul Wawrzyniaka 13</p>
+                <p class="c-contact__visit">Odwiedź nas</p>
+                <p class="c-contact__place">Mosina, ul Wawrzyniaka 13</p>
             </div>
         </section>
         <div class="c-map" style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no"
                 marginheight="0" marginwidth="0"
                 src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Mosina,%20wawrzyniaka%2013+(Medicalaser)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
         </div>
-        <footer class="l-footer">
-            <ul class="c-footer-nav">
-                <li class="c-footer-nav__item">
-                    <a href="#" class="c-footer-nav__link c-footer-nav__link--active">
-                        STRONA GŁÓWNA
-                    </a>
-                </li>
-                <li class="c-footer-nav__item">
-                    <a href="#" class="c-footer-nav__link">
-                        O NAS
-                    </a>
-                </li>
-                <li class="c-footer-nav__item">
-                    <a href="#" class="c-footer-nav__link ">
-                        ZABIEGI
-                    </a>
-                </li>
-                <li class="c-footer-nav__item">
-                    <a href="#" class="c-footer-nav__link ">
-                        CENNIK
-                    </a>
-                </li>
-                <li class="c-footer-nav__item">
-                    <a href="#" class="c-footer-nav__link ">
-                        NASI SPECJALIŚCI
-                    </a>
-                </li>
-                <li class="c-footer-nav__item">
-                    <a href="#" class="c-footer-nav__link ">
-                        KONTAKT
-                    </a>
-                </li>
-            </ul>
-            <ul class="c-nav-adress">
-                <li class="c-nav-adress__item"><i class="fas fa-map-marker-alt c-nav-adress__icon"></i>62-050 Mosina ul.
-                    Wawrzyniaka 13
-                </li>
-                <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
-                    +48 516 516 112
-                </li>
-                <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
-                    fotona4d@gmail.com
-                </li>
-            </ul>
-            <ul class="c-socials-nav">
-                <a href="https://www.facebook.com/eskulap.mosina" class="c-socials-nav__link">
-                    <li class="c-socials-nav__social"><i class="fab fa-facebook-square c-socials-nav__icon"></i></li>
-                </a>
-                <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials-nav__link">
-                    <li class="c-socials-nav__social"><i class="fab fa-instagram c-socials-nav__icon"></i></li>
-                </a>
-                <a href="eskulap.mosina@gmail.com" class="c-socials-nav__link">
-                    <li class="c-socials-nav__social"><i class="fas fa-envelope c-socials-nav__icon"></i></li>
-                </a>
-            </ul>
-        </footer>
     </main>
+    <footer class="l-footer">
+        <ul class="c-footer-nav">
+            <li class="c-footer-nav__item">
+                <a href="index.html" class="c-footer-nav__link c-footer-nav__link--active">
+                    STRONA GŁÓWNA
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="o-nas.html" class="c-footer-nav__link">
+                    O NAS
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="zabiegi.html" class="c-footer-nav__link ">
+                    ZABIEGI
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="#" class="c-footer-nav__link ">
+                    CENNIK
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="#" class="c-footer-nav__link ">
+                    NASI SPECJALIŚCI
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="#" class="c-footer-nav__link ">
+                    KONTAKT
+                </a>
+            </li>
+        </ul>
+        <ul class="c-nav-adress">
+            <li class="c-nav-adress__item"><i class="fas fa-map-marker-alt c-nav-adress__icon"></i>62-050 Mosina ul.
+                Wawrzyniaka 13
+            </li>
+            <li class="c-nav-adress__item"><i class="fas fa-phone c-nav-adress__icon"></i>
+                +48 516 516 112
+            </li>
+            <li class="c-nav-adress__item"><i class="fas fa-envelope c-nav-adress__icon"></i>
+                fotona4d@gmail.com
+            </li>
+        </ul>
+        <ul class="c-socials-nav">
+            <a href="https://www.facebook.com/eskulap.mosina" class="c-socials-nav__link">
+                <li class="c-socials-nav__social"><i class="fab fa-facebook-square c-socials-nav__icon"></i></li>
+            </a>
+            <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-socials-nav__link">
+                <li class="c-socials-nav__social"><i class="fab fa-instagram c-socials-nav__icon"></i></li>
+            </a>
+            <a href="eskulap.mosina@gmail.com" class="c-socials-nav__link">
+                <li class="c-socials-nav__social"><i class="fas fa-envelope c-socials-nav__icon"></i></li>
+            </a>
+        </ul>
+    </footer>
     <script src="script.js"></script>
 </body>
 
