--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
     <header class="l-header">
         <nav class="c-nav">
-            <a href="index.html"></a>
-            <div class="c-nav__logo">
-                <img src="./assets/Group 114.png" alt="Logo MedicaLaser" class="c-nav__img">
-            </div>
+            <a href="index.html">
+                <div class="c-nav__logo">
+                    <img src="./assets/Group 114.png" alt="Logo MedicaLaser" class="c-nav__img">
+                </div>
             </a>
             <button class="c-hamburger ">
                 <span class="c-hamburger__box c">
@@ -60,12 +60,12 @@
                         </a>
                     </li>
                     <li class="c-menu-nav__item">
-                        <a href="#" class="c-menu-nav__link ">
+                        <a href="specjalisci.html" class="c-menu-nav__link ">
                             NASI SPECJALIŚCI
                         </a>
                     </li>
                     <li class="c-menu-nav__item">
-                        <a href="#" class="c-menu-nav__link ">
+                        <a href="kontakt.html" class="c-menu-nav__link ">
                             KONTAKT
                         </a>
                     </li>
@@ -165,7 +165,7 @@ assets/doctor1-full_ejszml_c_scale,w_1920.png 1920w" src="assets/doctor1-full_ej
                     </div>
                 </div>
             </div>
-            <a href="" class="doctors-btn btn">Inni specjaliści</a>
+            <a href="specjalisci.html" class="doctors-btn btn">Inni specjaliści</a>
             <span class="doctors-line line"></span>
         </section>
         <section class="l-opinions">
@@ -409,12 +409,12 @@ assets/doctor1-full_ejszml_c_scale,w_1920.png 1920w" src="assets/doctor1-full_ej
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="specjalisci.html" class="c-footer-nav__link ">
                     NASI SPECJALIŚCI
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="kontakt.html" class="c-footer-nav__link ">
                     KONTAKT
                 </a>
             </li>
