--- a/specjalisci.html
+++ b/specjalisci.html
@@ -15,6 +15,7 @@
 <body>
     <div class="bg-menu">
     </div>
+
     <nav class="c-nav">
         <a href="index.html">
             <div class="c-nav__logo">
@@ -45,7 +46,7 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link c-menu-nav__link--active">
+                    <a href="o-nas.html" class="c-menu-nav__link ">
                         O NAS
                     </a>
                 </li>
@@ -60,7 +61,7 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="specjalisci.html" class="c-menu-nav__link ">
+                    <a href="specjalisci.html" class="c-menu-nav__link c-menu-nav__link--active">
                         NASI SPECJALIŚCI
                     </a>
                 </li>
@@ -76,50 +77,79 @@
             </ul>
         </div>
     </nav>
+
+
     <main class="l-main">
-        <section class="about-us">
+        <section class="l-doctors-page">
             <div class="c-header-section">
-                <h1 class="c-header-section__title">O NAS</h1>
+                <h1 class="c-header-section__title">NASI SPECJALIŚCI</h1>
             </div>
-            <div class="c-about">
-                <div class="c-about__img-wrapper">
-                    <div class="c-about__img-more">
-                        <h3 class="c-about__img-title">MEDICALASER</h3>
-                        <p class="c-about__img-desc">
-                            Centrum medycyny laserowej i regneracyjnej</p>
+            <div class="l-doctors">
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
                     </div>
                 </div>
-                <p class="c-about__text">Klinika MedicaLaser to specjalistyczne centrum medyczne położone w Mosinie.
-                    Posiada
-                    w swojej ofercie nowoczesne zabiegi laserowe, pozwalające szybko i bezinwazyjnie poprawić i
-                    odmłodzić wygląd skóry oraz ciała, a także pozbyć się dolegliwości takich jak nietrzymanie moczu,
-                    chrapanie, żylaki kończyn dolnych.
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
 
-                    Nasza klinika wyróżnia się szeroką ofertą innowacyjnych zabiegów, wśród których na szczególną uwagę
-                    pacjentów zasługuje laserowy Endolifting® Twarzy Fotona 4D. Tylko u nas można poddać się zabiegowi
-                    wzbogaconemu o koncentrat osocza bogatopłytkowego HD i ekstrakt komórek macierzystych. Oferujemy
-                    Państwu dwa pakiety laserowego Endoliftingu Twarzy 4D – wyłącznie w połączeniu z iniekcjami osocza
-                    lub komórek macierzystych.</p>
-            </div>
-
-            <h2 class="hours-subtitle">GODZINY OTWARCIA</h2>
-            <div class="l-hours">
-                <ul class="c-hours">
-                    <li class="c-hours__item">poniedziałek</li>
-                    <li class="c-hours__item">wtorek</li>
-                    <li class="c-hours__item">środa</li>
-                    <li class="c-hours__item">czwartek</li>
-                    <li class="c-hours__item">piątek</li>
-                    <li class="c-hours__item">sobota</li>
-                    <li class="c-hours__item">niedziela</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">nieczynne</li>
-                    <li class="c-hours__item">nieczynne</li>
-                </ul>
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
+                <div class="c-doctor">
+                    <img class="c-doctor__img" src="./assets/doctor1.png">
+                    <div class="c-doctor__more">
+                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
+                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
