--- a/zabiegi.html
+++ b/zabiegi.html
@@ -61,12 +61,12 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link ">
+                    <a href="specjalisci.html" class="c-menu-nav__link ">
                         NASI SPECJALIŚCI
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link ">
+                    <a href="kontakt.html" class="c-menu-nav__link ">
                         KONTAKT
                     </a>
                 </li>
@@ -84,7 +84,7 @@
             <div class="c-header-section">
                 <h1 class="c-header-section__title">ZABIEGI</h1>
             </div>
-            <h2 class="hours-subtitle">ZABIEGI LASEROWE</h2>
+            <h2 class="section-subtitle">ZABIEGI LASEROWE</h2>
             <div class="c-cards">
                 <div class="c-cards__card">
                     <div class="c-cards__more">
@@ -116,7 +116,7 @@
                 </div>
             </div>
 
-            <h2 class="hours-subtitle">BIOORTOPEDIA</h2>
+            <h2 class="section-subtitle">BIOORTOPEDIA</h2>
             <div class="c-cards">
                 <div class="c-cards__card">
                     <div class="c-cards__more">
@@ -172,12 +172,12 @@
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="specjalisci.html" class="c-footer-nav__link ">
                     NASI SPECJALIŚCI
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="kontakt.html" class="c-footer-nav__link ">
                     KONTAKT
                 </a>
             </li>
