--- a/kontakt.html
+++ b/kontakt.html
@@ -15,6 +15,7 @@
 <body>
     <div class="bg-menu">
     </div>
+
     <nav class="c-nav">
         <a href="index.html">
             <div class="c-nav__logo">
@@ -45,7 +46,7 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link c-menu-nav__link--active">
+                    <a href="o-nas.html" class="c-menu-nav__link ">
                         O NAS
                     </a>
                 </li>
@@ -65,7 +66,7 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="kontakt.html" class="c-menu-nav__link ">
+                    <a href="kontakt.html" class="c-menu-nav__link c-menu-nav__link--active">
                         KONTAKT
                     </a>
                 </li>
@@ -76,51 +77,51 @@
             </ul>
         </div>
     </nav>
+
+
     <main class="l-main">
-        <section class="about-us">
+        <section class="l-contact-page">
             <div class="c-header-section">
-                <h1 class="c-header-section__title">O NAS</h1>
+                <h1 class="c-header-section__title">KONTAKT</h1>
             </div>
-            <div class="c-about">
-                <div class="c-about__img-wrapper">
-                    <div class="c-about__img-more">
-                        <h3 class="c-about__img-title">MEDICALASER</h3>
-                        <p class="c-about__img-desc">
-                            Centrum medycyny laserowej i regneracyjnej</p>
-                    </div>
+            <div class="l-contact">
+                <div class="c-contact">
+                    <p class="c-contact__call">Zadzwoń</p>
+                    <p class="c-contact__number">+48 516 516 112</p>
                 </div>
-                <p class="c-about__text">Klinika MedicaLaser to specjalistyczne centrum medyczne położone w Mosinie.
-                    Posiada
-                    w swojej ofercie nowoczesne zabiegi laserowe, pozwalające szybko i bezinwazyjnie poprawić i
-                    odmłodzić wygląd skóry oraz ciała, a także pozbyć się dolegliwości takich jak nietrzymanie moczu,
-                    chrapanie, żylaki kończyn dolnych.
-
-                    Nasza klinika wyróżnia się szeroką ofertą innowacyjnych zabiegów, wśród których na szczególną uwagę
-                    pacjentów zasługuje laserowy Endolifting® Twarzy Fotona 4D. Tylko u nas można poddać się zabiegowi
-                    wzbogaconemu o koncentrat osocza bogatopłytkowego HD i ekstrakt komórek macierzystych. Oferujemy
-                    Państwu dwa pakiety laserowego Endoliftingu Twarzy 4D – wyłącznie w połączeniu z iniekcjami osocza
-                    lub komórek macierzystych.</p>
-            </div>
-
-            <h2 class="hours-subtitle">GODZINY OTWARCIA</h2>
-            <div class="l-hours">
-                <ul class="c-hours">
-                    <li class="c-hours__item">poniedziałek</li>
-                    <li class="c-hours__item">wtorek</li>
-                    <li class="c-hours__item">środa</li>
-                    <li class="c-hours__item">czwartek</li>
-                    <li class="c-hours__item">piątek</li>
-                    <li class="c-hours__item">sobota</li>
-                    <li class="c-hours__item">niedziela</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">nieczynne</li>
-                    <li class="c-hours__item">nieczynne</li>
-                </ul>
-            </div>
+                <div class="c-contact">
+                    <p class="c-contact__write">Napisz</p>
+                    <p class="c-contact__email">fotona4d@gmail.com</p>
+                </div>
+                <div class="c-contact">
+                    <p class="c-contact__visit">Odwiedź nas</p>
+                    <p class="c-contact__place">Mosina, ul Wawrzyniaka 13</p>
+                </div>
+        </section>
+        </div>
+        <h2 class="hours-subtitle">GODZINY OTWARCIA</h2>
+        <div class="l-hours">
+            <ul class="c-hours">
+                <li class="c-hours__item">poniedziałek</li>
+                <li class="c-hours__item">wtorek</li>
+                <li class="c-hours__item">środa</li>
+                <li class="c-hours__item">czwartek</li>
+                <li class="c-hours__item">piątek</li>
+                <li class="c-hours__item">sobota</li>
+                <li class="c-hours__item">niedziela</li>
+                <li class="c-hours__item">8:00 - 22:00</li>
+                <li class="c-hours__item">8:00 - 22:00</li>
+                <li class="c-hours__item">8:00 - 22:00</li>
+                <li class="c-hours__item">8:00 - 22:00</li>
+                <li class="c-hours__item">8:00 - 22:00</li>
+                <li class="c-hours__item">nieczynne</li>
+                <li class="c-hours__item">nieczynne</li>
+            </ul>
+        </div>
+        <div class="c-map" style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no"
+                marginheight="0" marginwidth="0"
+                src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Mosina,%20wawrzyniaka%2013+(Medicalaser)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+        </div>
         </section>
     </main>
     <footer class="l-footer">
