--- a/index.html
+++ b/index.html
@@ -76,22 +76,139 @@
                 </ul>
             </div>
         </nav>
-        <div class="c-header-section">
-            <h1 class="c-header-section__title">Najnowocześniejsze w Polsce centrum medycyny laserowej i regeneracyjnej.
-            </h1>
-            <div class="c-header-section__number-wrapper">
-                <p class="c-header-section__number">+48 516 516 112</p>
-                <img src="assets/phone.svg" alt="Ikona telefonu" class="c-header-section__phone-icon">
+        <div class="c-phone-wrapper"><i class="fas fa-phone c-phone-wrappper__icon"></i>
+            <p class="c-phone-wrapper__number">+48 516 516 112</p>
+        </div>
+        <div class="l-header-section-wrapper">
+            <div class="c-header-section">
+                <h1 class="c-header-section__title">ORTOPEDIA
+                </h1>
+                <div class="c-header-section__img-wrapper">
+                    <img class="c-header-section__img" sizes="(max-width: 1666px) 100vw, 1666px" srcset="
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_330.png 330w,
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_934.png 934w,
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1366.png 1366w,
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png 1666w"
+                        src="clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png" alt="Ćwicząca kobieta">
+                </div>
+
+                <ul class="c-header-list">
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Stawy</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Zwyrodnenia</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Stawy zapalne</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Biodra</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Kolana</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Artroza</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Łokcie</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Mięśnie</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Barki</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Ścięgna</li>
+                    </a>
+                </ul>
             </div>
-            <div class="c-header-section__img-wrapper">
-                <img sizes="(max-width: 1920px) 100vw, 1920px" srcset="
-assets/doctor1-full_ejszml_c_scale,w_360.png 360w,
-assets/doctor1-full_ejszml_c_scale,w_1097.png 1097w,
-assets/doctor1-full_ejszml_c_scale,w_1580.png 1580w,
-assets/doctor1-full_ejszml_c_scale,w_1920.png 1920w" src="assets/doctor1-full_ejszml_c_scale,w_1920.png" alt="Doctor"
-                    class="c-header-section__img">
+            <div class="c-header-section">
+                <h1 class="c-header-section__title">LASEROTERAPIA
+                </h1>
+                <div class="c-header-section__img-wrapper">
+                    <img class="c-header-section__img" sizes="(max-width: 768px) 100vw, 768px" srcset="
+assets/pexels-photo-1036623_kebkpg_c_scale,w_350.png 350w,
+assets/pexels-photo-1036623_kebkpg_c_scale,w_517.png 517w,
+assets/pexels-photo-1036623_kebkpg_c_scale,w_650.png 650w,
+assets/pexels-photo-1036623_kebkpg_c_scale,w_768.png 768w" src="pexels-photo-1036623_kebkpg_c_scale,w_768.png" alt="">
+                </div>
+
+                <ul class="c-header-list">
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Redukcja przebarwień</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Leczenie chrapania</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Zamykanie naczynek "Pajączków"</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Usuwanie kurzajek</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Redukcja blizn</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Fotoodmładzanie</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Endolifting</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Redukcja rozstępów</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Peeling</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="c-header-section">
+                <h1 class="c-header-section__title">PIELĘGNACJA SKÓRY
+                </h1>
+                <div class="c-header-section__img-wrapper">
+                    <img class="c-header-section__img" sizes="(max-width: 1860px) 100vw, 1860px" srcset="
+assets/S_wkkt5j_c_scale,w_350.png 350w,
+assets/S_wkkt5j_c_scale,w_1091.png 1091w,
+assets/S_wkkt5j_c_scale,w_1492.png 1492w,
+assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt="">
+                </div>
+
+                <ul class="c-header-list">
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Twarz</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Zmarszczki</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Regeneracja po zabiegach</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Kurze łapki</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Bruzdy</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Odmładzanie szyi i dekoltu</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Zabiegi przeciwstarzeniowe</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Włosy</li>
+                    </a>
+                    <a href="" class="c-header-list__link">
+                        <li class="c-header-list__item">Nos</li>
+                    </a>
+                </ul>
             </div>
         </div>
+
     </header>
     <main class="l-main">
         <section class="l-offert">
